tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__HighVoltageMulti-pKSx6HEUS0WkL6qkwo742g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8148220388809046234,
  "prerequisites": [
    160,
    3513441395399994532
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time to scale up production! In HV, a handful of new powerful multiblocks are available to you. In particular, take a look at the §lLarge Chemical Reactor§r, which always perfectly overclocks, as well as the §lDistillation Tower§r, which will allow you to get all byproducts from distillation instead of targeting just one.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "High Voltage Multiblocks",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    3513441395399994532
  ],
  "rewards": [],
  "tasks": []
}
