tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__HulkSmash-AAAAAAAAAAAAAAAAAAAFjQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1421,
  "prerequisites": [
    17509788580095423501
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mass destruction! Or at least, lots and lots of crushed ores. Build a maceration stack to keep up with all the ores you are getting. In IV you can upgrade the Multi to be much better with an upgrade chip and better casings.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Hulk Smash!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17509788580095423501
  ],
  "rewards": [],
  "tasks": []
}
