tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__InsaneVoltageMul-RFgYQ7LAQD-p1gHMaeg5Sg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12880365575383562570,
  "prerequisites": [
    213,
    17509788580095423501
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Upon reaching the land of IV machinery, you can put together even more multis and speed up your automation!\n\nMany of the multiblocks from IV tier onwards use special alloys, which either need to be cooked like any ingots you've used before (in a Furnace or EBF), but there are also alloys which have to be made in the Alloy Blast Smelter (ABS), as a fluid, which then needs to be solidified.\n\nThe multis that need ABS alloys are further down. To unlock their quests, you will first need to craft the ABS itself. However, there is a large assortment of machines you can craft without it, just by having the respective IV singleblock equivalent and some other resources.\n\nThose will be here... but you might be able to find some more, if you look closely through NEI. Good luck!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Insane Voltage Multiblocks",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213,
    17509788580095423501
  ],
  "rewards": [],
  "tasks": []
}
