tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__IthinkImgoingtob-AAAAAAAAAAAAAAAAAAAH7A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2028,
  "prerequisites": [
    17509788580095423501
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Industrial Centrifuge is the solution to those thousands of ore you'll get with the multiblock ore drill.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "I think I'm going to be sick",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17509788580095423501
  ],
  "rewards": [],
  "tasks": []
}
