tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__MABS-AAAAAAAAAAAAAAAAAAAM1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3285,
  "prerequisites": [
    15325266858921172336,
    2628
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This unholy union between Mega and GT++ must be the work of some madman. It is the ultimate metallurgical furnace to make your alloys with up to 256 parallels. Using better coils and glass also boosts its speed and reduces energy costs!\n\nThe glass tier limits both the energy hatch tier and the recipe tier. As with other multis, UEV glass unlocks all tiers and UV glass is needed for lasers.\n\nGlass tiers gate recipe tiers, for example UHV recipes need UHV glass.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lMABS",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15325266858921172336,
    2628
  ],
  "rewards": [],
  "tasks": []
}
